tests/programs/valid/import_local_package/main.py
#!/usr/bin/env python

import messages

print(messages.message)
