tests/programs/invalid/import_executable/main.py
#!/usr/bin/env python

import other
